--- a/web/index.html
+++ b/web/index.html
@@ -60,6 +60,7 @@
 <div class="col-md-2"></div>
 </div>
 </div>
+    <div style="font-weight:bold; text-align:right;position: absolute;bottom: 0; right: 5px;">Gemaakt door J&J</div>
     <script src="./main.js"></script>
 </body>
 </html>
