--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,10 @@
 <div class="col-md-2"></div>
 </div>
 </div>
-    <div style="font-weight:bold; text-align:right;position: absolute;bottom: 0; right: 5px;">Gemaakt door J&J</div>
+<div class="row">
+    <div class="ml-auto"></div>
+    <div><p>Gemaakt door JJC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></div>
     <script src="./main.js"></script>
+</div>
 </body>
 </html>
