--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/ico" href="./images/favicon.ico">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container notification-container">
@@ -32,39 +33,87 @@
         <div class="col-md-1"></div>
         <label for="monday" class="col-md-3">Maandag:</label>
         <input class="form-control col-md-3" type="time" value="11:45" name="monday" id="monday">
+        <select name="monday_location" id="monday_location" class="form-control col-md-3 ml-3">
+            <option>ElfdeLinie</option>
+            <option>Diepenbeek</option>
+            <option>Vildersstraat</option>
+        </select>
+        <div class="custom-control custom-checkbox ml-3" style="align-self:center;">
+            <input type="checkbox" class="custom-control-input" id="no_monday" name="no_monday" onchange="no_email_clicked('monday')">
+            <label class="custom-control-label" for="no_monday">Geen mail</label>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-1"></div>
         <label for="tuesday" class="col-md-3">Dinsdag:</label>
         <input class="form-control col-md-3" type="time" value="11:45" name="tuesday" id="tuesday">
+        <select name="tuesday_location" id="tuesday_location" class="form-control col-md-3 ml-3">
+            <option>ElfdeLinie</option>
+            <option>Diepenbeek</option>
+            <option>Vildersstraat</option>
+        </select>
+        <div class="custom-control custom-checkbox ml-3" style="align-self:center;">
+        <input type="checkbox" class="custom-control-input" id="no_tuesday" name="no_tuesday" onchange="no_email_clicked('tuesday')">
+        <label class="custom-control-label" for="no_tuesday">Geen mail</label>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-1"></div>
         <label for="wednesday" class="col-md-3">Woensdag:</label>
         <input class="form-control col-md-3" type="time" value="11:45" name="wednesday" id="wednesday">
+        <select name="wednesday_location" id="wednesday_location" class="form-control col-md-3 ml-3">
+            <option>ElfdeLinie</option>
+            <option>Diepenbeek</option>
+            <option>Vildersstraat</option>
+        </select>
+        <div class="custom-control custom-checkbox ml-3" style="align-self:center;">
+        <input type="checkbox" class="custom-control-input" id="no_wednesday" name="no_wednesday" onchange="no_email_clicked('wednesday')">
+        <label class="custom-control-label" for="no_wednesday">Geen mail</label>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-1"></div>
         <label for="thursday" class="col-md-3">Donderdag:</label>
         <input class="form-control col-md-3" type="time" value="11:45" name="thursday" id="thursday">
+        <select name="thursday_location" id="thursday_location" class="form-control col-md-3 ml-3">
+            <option>ElfdeLinie</option>
+            <option>Diepenbeek</option>
+            <option>Vildersstraat</option>
+        </select>
+        <div class="custom-control custom-checkbox ml-3" style="align-self:center;">
+        <input type="checkbox" class="custom-control-input" id="no_thursday" name="no_thursday" onchange="no_email_clicked('thursday')">
+        <label class="custom-control-label" for="no_thursday">Geen mail</label>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-1"></div>
         <label for="friday" class="col-md-3">Vrijdag:</label>
         <input class="form-control col-md-3" type="time" value="11:45" name="friday" id="friday">
+        <select name="friday_location" id="friday_location" class="form-control col-md-3 ml-3">
+            <option>ElfdeLinie</option>
+            <option>Diepenbeek</option>
+            <option>Vildersstraat</option>
+        </select>
+        <div class="custom-control custom-checkbox ml-3" style="align-self:center;">
+        <input type="checkbox" class="custom-control-input" id="no_friday" name="no_friday" onchange="no_email_clicked('friday')">
+        <label class="custom-control-label" for="no_friday">Geen mail</label>
+        </div>
     </div>
     <br>
     <div class="row">
         <div class="col-md-3"></div>
         <button disabled class="col-md-6 btn btn-success" onclick="subscribe()" name="submit" id="submit" type="submit" class="btnSubmit">Inschrijven</button>
         <div class="col-md-3"></div>
+        
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-5"></div>
+        <a role="button" class="col-md-2 btn btn-dark" href="https://github.com/llJochemll/CateringNotification"><i class="fa fa-github"></i>Github</a>
     </div>
 </div>
 </div>
-<div class="col-md-2"></div>
 </div>
-</div>
-    <div style="font-weight:bold; text-align:right;position: absolute;bottom: 0; right: 5px;">Gemaakt door J&J</div>
-    <script src="./main.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
