--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-md-1"></div>
         <label class="col-md-3" for="email">Email:</label>
-        <input onchange="checkInputEmail()" onkeyup="checkInputEmail()" class="form-control col-md-6" type="email" name="email" id="email">
+        <input onchange="checkEmailInput()" onkeyup="checkEmailInput()" class="form-control col-md-6" type="email" name="email" id="email">
     </div>
     <br>
     <div class="row">
