Fix checks in verify

--- a/web/verify/index.html
+++ b/web/verify/index.html
@@ -25,13 +25,13 @@
     <div class="row">
         <div class="col-md-1"></div>
         <label class="col-md-3" for="email">Email:</label>
-        <input onchange="checkInput()" onkeyup="checkInput()" class="form-control col-md-6" type="email" name="email" id="email">
+        <input onchange="checkEmailInput()" onkeyup="checkEmailInput()" class="form-control col-md-6" type="email" name="email" id="email">
     </div>
     <br>
     <div class="row">
         <div class="col-md-1"></div>
         <label class="col-md-3" for="token">Token:</label>
-        <input onchange="checkInput()" onkeyup="checkInput()" class="form-control col-md-6" type="number" name="token" id="token">
+        <input onchange="checkTokenInput()" onkeyup="checkTokenInput()" class="form-control col-md-6" type="number" name="token" id="token">
     </div>
     <br>
     <div class="row">
